@@ -1126,6 +1126,18 @@ argument_list|,
 name|cmd
 operator|.
 name|waitSearcher
+argument_list|,
+name|cmd
+operator|.
+name|maxOptimizeSegments
+argument_list|,
+name|cmd
+operator|.
+name|softCommit
+argument_list|,
+name|cmd
+operator|.
+name|expungeDeletes
 argument_list|)
 expr_stmt|;
 block|}
